--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.Development.json
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DataContext": "data source=.;initial catalog={{cookiecutter.project_name}};user id=sa;password=sa;"
   }
 }
