--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "DataContext": "data source=.;initial catalog={{cookiecutter.project_name}}Deploy;user id=sa;password=sa;"
+    "DataContext": "data source=.;initial catalog={{cookiecutter.project_name}};user id=sa;password=sa;"
   }
 }
