--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}.csproj
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}.csproj
@@ -162,4 +162,9 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\IOT\" />
+    <Folder Include="Helpers\WebApi\" />
+  </ItemGroup>
+
 </Project>
