--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataContext": "data source=.;initial catalog={{cookiecutter.project_name}};user id=sa;password=sa;",
+    "DataContext": "data source=.;initial catalog={{cookiecutter.project_name}}Test4;user id=sa;password=sa;",
     "Redis": ".,abortConnect=false,connectRetry=3,connectTimeout=3000,defaultDatabase=1,syncTimeout=3000,version=3.2.1,responseTimeout=3000",
     "MongoDB": "mongodb://./{{cookiecutter.project_name}}",
     "MySql": "server=.;port=3306;username=root;password=123456;database={{cookiecutter.project_name}};"
