--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
@@ -14,5 +14,23 @@
   },
   "ConnectionStrings": {
     "DataContext": "data source=.;initial catalog={{cookiecutter.project_name}};user id=sa;password=sa;"
+  },
+  "SenparcSetting": {
+    "IsDebug": false,
+    "DefaultCacheNamespace": "DefaultCache",
+    "Cache_Redis_Configuration": "",
+    "Cache_Memcached_Configuration": "",
+    "SenparcUnionAgentKey": "SenparcUnionAgentKey"
+  },
+  "SenparcWeixinSetting": {
+    "IsDebug": false,
+    //公众号
+    "Token": "weixin",
+    "EncodingAESKey": "",
+    "WeixinAppId": "wx806943202a75a124",
+    "WeixinAppSecret": "d52257abea1018eec3a798005ba4f841",
+    //企业微信
+    "WeixinCorpId": "WeixinCorpId",
+    "WeixinCorpSecret": "WeixinCorpSecret"
   }
 }
