--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/appsettings.json
@@ -17,20 +17,17 @@
   },
   "SenparcSetting": {
     "IsDebug": false,
-    "DefaultCacheNamespace": "DefaultCache",
+    "DefaultCacheNamespace": "WeixinCache",
     "Cache_Redis_Configuration": "",
     "Cache_Memcached_Configuration": "",
-    "SenparcUnionAgentKey": "SenparcUnionAgentKey"
+    "SenparcUnionAgentKey": "WeixinAgentKey"
   },
   "SenparcWeixinSetting": {
     "IsDebug": false,
     //公众号
-    "Token": "weixin",
+    "Token": "bitadmincore",
     "EncodingAESKey": "",
     "WeixinAppId": "wx806943202a75a124",
-    "WeixinAppSecret": "d52257abea1018eec3a798005ba4f841",
-    //企业微信
-    "WeixinCorpId": "WeixinCorpId",
-    "WeixinCorpSecret": "WeixinCorpSecret"
+    "WeixinAppSecret": "d52257abea1018eec3a798005ba4f841"
   }
 }
